Reworked and added to regression models.

--- a/data-processing/breast-cancer-data-processing.ipynb
+++ b/data-processing/breast-cancer-data-processing.ipynb
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "\n",
     "# change the ouput class to NUMERIC\n",
-    "filename = \"breast_cancer_train.csv\"\n",
+    "filename = \"birth_weight.csv\"\n",
     "df = pd.read_csv(\"../data/\" + filename)\n",
     "df['diagnosis'] = df['diagnosis'].map({'M': 1, 'B': 0}) # change W/B classifiers to numeric\n",
     "df.to_csv('../data/' + filename, index=False)  "
