--- a/data-processing/test-train-splitting.ipynb
+++ b/data-processing/test-train-splitting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "returning-trade",
    "metadata": {},
    "outputs": [],
@@ -12,23 +12,15 @@
     "\n",
     "# USE 80/20 TRAIN/TEST SPLIT\n",
     "file = 'us_births'\n",
-    "df = pd.read_csv('data/' + file + '.csv')\n",
+    "df = pd.read_csv('../original-data/' + file + '.csv')\n",
     "rng = RandomState()\n",
     "\n",
     "train = df.sample(frac=0.8, random_state=rng)\n",
     "test = df.loc[~df.index.isin(train.index)]\n",
     "\n",
-    "train.to_csv('data_split/' + file + '_train.csv', index=False)  \n",
-    "test.to_csv('data_split/' + file + '_test.csv', index=False)  "
+    "train.to_csv('../data/' + file + '_train.csv', index=False)  \n",
+    "test.to_csv('../data/' + file + '_test.csv', index=False)  "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "insured-professional",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
