Added fetal health models.

--- a/data-processing/test-train-splitting.ipynb
+++ b/data-processing/test-train-splitting.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "# USE 80/20 TRAIN/TEST SPLIT\n",
     "file = 'us_births'\n",
-    "df = pd.read_csv('../original-data/' + file + '.csv')\n",
+    "df = pd.read_csv('../data/original-data/' + file + '.csv')\n",
     "rng = RandomState()\n",
     "\n",
     "train = df.sample(frac=0.8, random_state=rng)\n",
